--- a/aws-auth.yaml
+++ b/aws-auth.yaml
@@ -4,7 +4,7 @@ data:
     - groups:
       - system:bootstrappers
       - system:nodes
-      rolearn: arn:aws:iam::273354630431:role/eksctl-expense1-nodegroup-expense1-NodeInstanceRole-gZFMeRrcrqKl
+      rolearn: arn:aws:iam::273354630431:user/Leela:role/eksctl-expense1-nodegroup-expense1-NodeInstanceRole-gZFMeRrcrqKl
       username: system:node:{{EC2PrivateDNSName}}
 mapUsers: |
     - groups:
