--- a/aws-auth.yaml
+++ b/aws-auth.yaml
@@ -8,7 +8,7 @@ data:
       username: system:node:{{EC2PrivateDNSName}}
 mapUsers: |
     - groups:
-      - system:masters
+      - default-trainee
       userarn: arn:aws:iam::273354630431:user/Leela
       username: Leela
 kind: ConfigMap
